<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:context=".MissedTableActivity" >
	
    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#99CCFF"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
           
            android:id="@+id/Num"
            style="@style/TitleOfTable"
            android:text="@string/number" />

        <TextView
           
            android:id="@+id/N_1"
            style="@style/textStyleOfTable"
            android:hint="1 2" 
            android:textColorHint="@drawable/darkGreenCut"/>

        <TextView
           
            android:id="@+id/N_2"
            style="@style/textStyleOfTable"
             android:textColorHint="@drawable/darkGreenCut"
            android:hint="2 2" />

        <TextView
           
            android:id="@+id/N_3"
             android:textColorHint="@drawable/darkGreenCut"
            style="@style/textStyleOfTable"
            android:hint="3 1" />

        <TextView
           
             android:textColorHint="@drawable/darkGreenCut"
            android:id="@+id/N_4"
            style="@style/textStyleOfTable"
            android:hint="8 8" />

        <TextView
           
             android:textColorHint="@drawable/darkGreenCut"
            android:id="@+id/N_5"
            style="@style/textStyleOfTable"
            android:hint="6 4" />

        <TextView
           
             android:textColorHint="@drawable/darkGreenCut"
            android:id="@+id/N_6"
            style="@style/textStyleOfTable"
            android:hint="5 5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#99CCFF"
        android:orientation="vertical"
        android:textColor="@drawable/DarkBlue" >

        <TextView
           
            android:id="@+id/Pro"
            style="@style/TitleOfTable"
            android:text="@string/probability" />

        <TextView
            android:id="@+id/P_1"

            style="@style/textStyleOfTable"
            android:text="@string/Num_pro" />

        <TextView
            android:id="@+id/P_2"
            style="@style/textStyleOfTable"
            android:text="@string/Num_pro" />

        <TextView
           
            android:id="@+id/P_3"
            style="@style/textStyleOfTable"
            android:text="@string/Num_pro" />

        <TextView
           
            android:id="@+id/P_4"
            style="@style/textStyleOfTable"
            android:text="@string/Num_pro" />

        <TextView
           
            android:id="@+id/P_5"
            style="@style/textStyleOfTable"
            android:text="@string/Num_pro" />

        <TextView
           
            android:id="@+id/P_6"
            style="@style/textStyleOfTable"
            android:text="@string/Num_pro" />

    </LinearLayout>
    <!-- 第3列 出现概率结束 -->
    <!-- 第4列 出现次数开始 -->

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#99CCFF"
        android:orientation="vertical"
        android:textColor="@drawable/DarkBlue" >

        <TextView
           
            android:id="@+id/seq"
            style="@style/TitleOfTable"
            android:text="@string/times" />

        <TextView
           
            android:id="@+id/T_1"
            style="@style/textStyleOfTable"
            android:hint="12"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/T_2"
            style="@style/textStyleOfTable"
            android:hint="14"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/T_3"
            style="@style/textStyleOfTable"
            android:hint="22"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/T_4"
            style="@style/textStyleOfTable"
            android:hint="30"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/T_5"
           style="@style/textStyleOfTable"
            android:hint="13"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/T_6"
            style="@style/textStyleOfTable"
            android:hint="24"
            android:textColorHint="@drawable/darkGreenCut" />
    </LinearLayout>
    <!-- 第4列 出现次数结束 -->
    <!-- 第5列 当前遗漏开始 -->

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#99CCFF"
        android:orientation="vertical"
        android:textColor="@drawable/DarkBlue" >

        <TextView
           
            android:id="@+id/Curr"
            style="@style/TitleOfTable"
            android:text="@string/CurrentMaxMissed" />

        <TextView
           
            android:id="@+id/C_1"
            style="@style/textStyleOfTable"
            android:hint="2"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/C_2"
            style="@style/textStyleOfTable"
            android:hint="0"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/C_3"
            style="@style/textStyleOfTable"
            android:hint="17"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/C_4"
            style="@style/textStyleOfTable"
            android:hint="1"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/C_5"
            style="@style/textStyleOfTable"
            android:hint="41"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/C_6"
            style="@style/textStyleOfTable"
            android:hint="33"
            android:textColorHint="@drawable/darkGreenCut" />
    </LinearLayout>
    <!-- 第5列 当前遗漏结束 -->

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#99CCFF"
        android:orientation="vertical"
        android:textColor="@drawable/DarkBlue" >

        <TextView
           
            android:id="@+id/maxM"
            style="@style/TitleOfTable"
            android:text="@string/MaxMissed" />

        <TextView
           
            android:id="@+id/M_1"
            style="@style/textStyleOfTable"
            android:hint="39"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/M_2"
           style="@style/textStyleOfTable"
            android:hint="41"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/M_3"
           style="@style/textStyleOfTable"
            android:hint="31"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/M_4"
            style="@style/textStyleOfTable"
            android:hint="6"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/M_5"
            style="@style/textStyleOfTable"
            android:hint="32"
            android:textColorHint="@drawable/darkGreenCut" />

        <TextView
           
            android:id="@+id/M_6"
            style="@style/textStyleOfTable"
            android:hint="32"
            android:textColorHint="@drawable/darkGreenCut" />
    </LinearLayout>

</LinearLayout>